# python-ls

./: .gitignore  .travis.yml  LICENSE  README.md  pixi.toml  pyproject.toml  python_ls.pth  setup.py  tox.ini
python_ls/: __init__.py  _ls.py
tests/: test_ls.py
